--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       <div class="footer">
         <p class="js-move"></p>
         <button>RULES</button>
+        <button onclick="autoPlay();">AUTO PLAY</button>
 
         <button onclick="
         wins.counter = 0;
